# algorithms

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
algorithms/: chapter1.ipynb  chapter2.ipynb  chapter27.ipynb  chapter4.ipynb  chapter5.ipynb  insertion_sort.py
algorithms/chapter15/: fibonacci.py  rod_cutting.py
algorithms/chapter2/: binary_search.py  chapter2_1.ipynb  chapter2_2.ipynb  chapter2_3.ipynb  find_equal_sum.py  functions.py  insertion_sort.py  merge_sort.py  selection_sort.py
algorithms/chapter4/: compare_algorithms.py  find_max_subarray.py  matrix_operations.py
algorithms/chapter5/: hire_assistant.py
tests/: test_insertion_sort.py
tests/chapter15/: test_fibonacci.py  test_rod_cutting.py
tests/chapter2/: test_binary_search.py  test_functions.py  test_insertion_sort.py  test_merge_sort.py  test_selection_sort.py
tests/chapter4/: test_find_max_subarray.py  test_matrix_multiply.py
tests/chapter5/: test_hire_assistant.py
