[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["André Rodrigues <andrelmarques11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.2"
ipykernel = "^6.25.0"
numpy = "^1.25.1"
plotly = "^5.15.0"
nbformat = "^5.9.1"
pandas = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"
black = "^23.7.0"
flake8 = "^6.1.0"
pre-commit = "^3.3.3"
mypy = "^1.4.1"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.mypy]
warn_return_any = true
disallow_untyped_defs = true